--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "test": "mocha",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "npm run lint:prettier && npm run lint:eslint",
+    "lint": "npm-run-all lint:**",
     "lint:prettier": "prettier --check --plugin-search-dir=. .",
     "lint:eslint": "eslint --cache --ignore-path .gitignore .",
+    "lint:fortawesome-es-workaround": "node tools/validateFortawesomeESWorkaround.js",
     "format": "prettier --write --plugin-search-dir=. .",
     "prepare": "husky install && cd tools && node generateDiffSequenceEsm.js && cd ..",
     "release": "npm-run-all release:**",
