--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build:watch": "npm run build -- --watch",
     "build:svelte": "npm-run-all build:svelte:**",
     "build:svelte:prepare": "svelte-kit sync",
-    "build:svelte:package": "svelte-kit package",
+    "build:svelte:package": "svelte-package",
     "build:svelte:deprecated": "cpy --flat tools/dist-deprecated package/dist",
     "build:vanilla": "npm-run-all build:vanilla:**",
     "build:vanilla:clean": "del-cli package-vanilla",
@@ -87,7 +87,9 @@
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "13.3.0",
     "@rollup/plugin-typescript": "8.4.0",
-    "@sveltejs/kit": "1.0.0-next.406",
+    "@sveltejs/adapter-auto": "1.0.0-next.71",
+    "@sveltejs/kit": "1.0.0-next.461",
+    "@sveltejs/package": "1.0.0-next.3",
     "@types/cookie": "0.5.1",
     "@types/lodash-es": "4.17.6",
     "@types/mocha": "9.1.1",
@@ -113,7 +115,6 @@
     "svelte2tsx": "0.5.16",
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
-    "typescript": "4.8.2",
-    "vite": "3.0.9"
+    "typescript": "4.8.2"
   }
 }
