--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "svelte2tsx": "0.5.16",
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
-    "typescript": "4.8.2"
+    "typescript": "4.8.2",
+    "vite": "3.1.0-beta.1"
   }
 }
