fix: upgrade to `immutable-json-patch@5.0.0`, fixing search

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "build:vanilla:copy:readme": "cpy --rename README.md README-VANILLA.md package-vanilla",
     "build:vanilla:copy:themes": "cpy --flat src/lib/themes package-vanilla/themes",
     "build:vanilla:package-json": "node tools/createVanillaPackageJson.js",
+    "build-and-test": "npm test && npm run lint && npm run build",
     "test": "mocha",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -61,10 +62,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "ajv-dist": "^8.11.0",
-    "classnames": "^2.3.1",
+    "classnames": "^2.3.2",
     "codemirror": "^6.0.1",
     "diff-sequences": "^29.0.0",
-    "immutable-json-patch": "^4.0.1",
+    "immutable-json-patch": "^5.0.0",
     "jmespath": "^0.16.0",
     "json-source-map": "^0.6.1",
     "jsonrepair": "^2.2.1",
@@ -86,16 +87,16 @@
     "@rollup/plugin-babel": "5.3.1",
     "@rollup/plugin-commonjs": "22.0.2",
     "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "14.0.1",
+    "@rollup/plugin-node-resolve": "14.1.0",
     "@rollup/plugin-typescript": "8.5.0",
-    "@sveltejs/adapter-auto": "1.0.0-next.72",
-    "@sveltejs/kit": "1.0.0-next.480",
+    "@sveltejs/adapter-auto": "1.0.0-next.73",
+    "@sveltejs/kit": "1.0.0-next.481",
     "@sveltejs/package": "1.0.0-next.3",
     "@types/cookie": "0.5.1",
     "@types/lodash-es": "4.17.6",
     "@types/mocha": "9.1.1",
-    "@typescript-eslint/eslint-plugin": "5.36.2",
-    "@typescript-eslint/parser": "5.36.2",
+    "@typescript-eslint/eslint-plugin": "5.37.0",
+    "@typescript-eslint/parser": "5.37.0",
     "cpy-cli": "4.2.0",
     "del-cli": "5.0.0",
     "eslint": "8.22.0",
