--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "svelte-jsoneditor",
   "description": "A web-based tool to view, edit, format, transform, and validate JSON",
+  "homepage": "https://jsoneditoronline.org",
   "version": "0.7.4",
   "type": "module",
   "svelte": "index.js",
