chore: add linting script to Github actions

--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -11,7 +11,7 @@ on:
     branches: [develop, main]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     strategy:
@@ -29,3 +29,16 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
+
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 16.x
+      - run: npm ci
+      - run: npm run lint
+        env:
+          CI: true
