feat: implemented options `parser` and `validationParser` to support alternative JSON parsers like lossless-json (#151)
* feat: custom parser largely working (WIP)

* fix: extend `isTimestamp` to support `LosslessNumber` and `bigint`

* fix: show error when sorting throws an error

* fix: use the custom parser when validating content in `text` mode

* docs: describe the new property `parser` in the readme

* fix: truncate raw contents in development page

* fix: enforce string not working with custom parser

* chore: create a real `getAbsolutePath` function for use in the build scripts

* fix: mark the package as side-effects free, allowing better optimization in bundlers

* chore: fix merge conflicts

* fix: upgrade to `immutable-json-patch@5.0.0`, fixing search

* chore: cleanup logging

* fix: support `bigint` in the query languages

* feat: rerender the editor when parser changes

* feat: implement `validationParser`

* fix: only validate when a validator function is provided

* fix: do not show parse or validation errors when the editor is disabled

* chore: make all properties of the internal TextMode and TreeMode required, remove the default values

* docs: add homepage in package.json

* chore: reorder fields in package.json

* fix: export util function `isEqualParser`

* chore: update all dependencies, including `lossless-json@2.0.0`

--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "svelte-jsoneditor",
   "description": "A web-based tool to view, edit, format, transform, and validate JSON",
   "version": "0.7.6",
+  "homepage": "https://jsoneditoronline.org",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/josdejong/svelte-jsoneditor.git"
+  },
   "type": "module",
   "svelte": "index.js",
   "module": "index.js",
   "main": "index.js",
   "types": "index.d.ts",
   "sideEffects": false,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/josdejong/svelte-jsoneditor.git"
-  },
   "license": "ISC",
   "scripts": {
     "dev": "vite dev",
@@ -31,6 +32,7 @@
     "build:vanilla:copy:readme": "cpy --rename README.md README-VANILLA.md package-vanilla",
     "build:vanilla:copy:themes": "cpy --flat src/lib/themes package-vanilla/themes",
     "build:vanilla:package-json": "node tools/createVanillaPackageJson.js",
+    "build-and-test": "npm test && npm run lint && npm run build",
     "test": "mocha",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -50,28 +52,28 @@
     "dry-run": "standard-version --dry-run"
   },
   "dependencies": {
-    "@codemirror/commands": "^6.1.0",
+    "@codemirror/commands": "^6.1.1",
     "@codemirror/lang-json": "^6.0.0",
     "@codemirror/language": "^6.2.1",
     "@codemirror/lint": "^6.0.0",
-    "@codemirror/search": "^6.2.0",
-    "@codemirror/state": "^6.1.1",
-    "@codemirror/view": "^6.2.3",
+    "@codemirror/search": "^6.2.1",
+    "@codemirror/state": "^6.1.2",
+    "@codemirror/view": "^6.3.0",
     "@fontsource/fira-mono": "^4.5.9",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "ajv-dist": "^8.11.0",
-    "classnames": "^2.3.1",
+    "classnames": "^2.3.2",
     "codemirror": "^6.0.1",
     "diff-sequences": "^29.0.0",
-    "immutable-json-patch": "^4.0.1",
+    "immutable-json-patch": "^5.1.0",
     "jmespath": "^0.16.0",
     "json-source-map": "^0.6.1",
     "jsonrepair": "^2.2.1",
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
     "natural-compare-lite": "^1.4.0",
-    "sass": "^1.54.9",
+    "sass": "^1.55.0",
     "svelte": "^3.50.1",
     "svelte-awesome": "^3.0.0",
     "svelte-select": "^4.4.7",
@@ -79,44 +81,45 @@
     "vanilla-picker": "^2.12.1"
   },
   "devDependencies": {
-    "@babel/core": "7.19.0",
-    "@babel/preset-env": "7.19.0",
+    "@babel/core": "7.19.3",
+    "@babel/preset-env": "7.19.3",
     "@commitlint/cli": "17.1.2",
     "@commitlint/config-conventional": "17.1.0",
     "@rollup/plugin-babel": "5.3.1",
     "@rollup/plugin-commonjs": "22.0.2",
     "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "14.0.1",
+    "@rollup/plugin-node-resolve": "14.1.0",
     "@rollup/plugin-typescript": "8.5.0",
-    "@sveltejs/adapter-auto": "1.0.0-next.72",
-    "@sveltejs/kit": "1.0.0-next.480",
-    "@sveltejs/package": "1.0.0-next.3",
+    "@sveltejs/adapter-auto": "1.0.0-next.80",
+    "@sveltejs/kit": "1.0.0-next.504",
+    "@sveltejs/package": "1.0.0-next.5",
     "@types/cookie": "0.5.1",
     "@types/lodash-es": "4.17.6",
-    "@types/mocha": "9.1.1",
-    "@typescript-eslint/eslint-plugin": "5.36.2",
-    "@typescript-eslint/parser": "5.36.2",
+    "@types/mocha": "10.0.0",
+    "@typescript-eslint/eslint-plugin": "5.38.1",
+    "@typescript-eslint/parser": "5.38.1",
     "cpy-cli": "4.2.0",
     "del-cli": "5.0.0",
-    "eslint": "8.22.0",
+    "eslint": "8.24.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-svelte3": "4.0.0",
     "husky": "8.0.1",
+    "lossless-json": "2.0.0",
     "mocha": "10.0.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
-    "prettier-plugin-svelte": "2.7.0",
-    "rollup": "2.79.0",
+    "prettier-plugin-svelte": "2.7.1",
+    "rollup": "2.79.1",
     "rollup-plugin-dts": "4.2.2",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
     "standard-version": "9.5.0",
-    "svelte-check": "2.9.0",
+    "svelte-check": "2.9.1",
     "svelte-preprocess": "4.10.7",
-    "svelte2tsx": "0.5.16",
+    "svelte2tsx": "0.5.19",
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
-    "typescript": "4.8.3",
-    "vite": "3.1.0"
+    "typescript": "4.8.4",
+    "vite": "3.1.4"
   }
 }
