Package.json changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-jsoneditor",
+  "name": "@mercurio123/svelte-jsoneditor",
   "description": "A web-based tool to view, edit, format, transform, and validate JSON",
   "version": "0.7.1",
   "type": "module",
@@ -9,7 +9,7 @@
   "types": "index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/josdejong/svelte-jsoneditor.git"
+    "url": "https://github.com/mercurio123/svelte-jsoneditor.git"
   },
   "license": "ISC",
   "scripts": {
