--- a/package.json
+++ b/package.json
@@ -53,12 +53,12 @@
   },
   "dependencies": {
     "@codemirror/commands": "^6.1.2",
-    "@codemirror/lang-json": "^6.0.0",
-    "@codemirror/language": "^6.2.1",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/language": "^6.3.0",
     "@codemirror/lint": "^6.0.0",
-    "@codemirror/search": "^6.2.1",
+    "@codemirror/search": "^6.2.2",
     "@codemirror/state": "^6.1.2",
-    "@codemirror/view": "^6.3.1",
+    "@codemirror/view": "^6.4.0",
     "@fontsource/fira-mono": "^4.5.10",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
@@ -81,26 +81,27 @@
     "vanilla-picker": "^2.12.1"
   },
   "devDependencies": {
-    "@babel/core": "7.19.3",
+    "@babel/core": "7.19.6",
     "@babel/preset-env": "7.19.4",
     "@commitlint/cli": "17.1.2",
     "@commitlint/config-conventional": "17.1.0",
-    "@rollup/plugin-babel": "6.0.0",
-    "@rollup/plugin-commonjs": "23.0.0",
-    "@rollup/plugin-json": "5.0.0",
-    "@rollup/plugin-node-resolve": "15.0.0",
-    "@rollup/plugin-typescript": "9.0.1",
-    "@sveltejs/adapter-auto": "1.0.0-next.83",
-    "@sveltejs/kit": "1.0.0-next.516",
+    "@rollup/plugin-babel": "6.0.2",
+    "@rollup/plugin-commonjs": "23.0.2",
+    "@rollup/plugin-json": "5.0.1",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-terser": "0.1.0",
+    "@rollup/plugin-typescript": "9.0.2",
+    "@sveltejs/adapter-auto": "1.0.0-next.85",
+    "@sveltejs/kit": "1.0.0-next.526",
     "@sveltejs/package": "1.0.0-next.5",
     "@types/cookie": "0.5.1",
     "@types/lodash-es": "4.17.6",
     "@types/mocha": "10.0.0",
-    "@typescript-eslint/eslint-plugin": "5.40.0",
-    "@typescript-eslint/parser": "5.40.0",
+    "@typescript-eslint/eslint-plugin": "5.41.0",
+    "@typescript-eslint/parser": "5.41.0",
     "cpy-cli": "4.2.0",
     "del-cli": "5.0.0",
-    "eslint": "8.25.0",
+    "eslint": "8.26.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-svelte3": "4.0.0",
     "husky": "8.0.1",
@@ -109,10 +110,9 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "prettier-plugin-svelte": "2.8.0",
-    "rollup": "2.79.1",
-    "rollup-plugin-dts": "4.2.3",
+    "rollup": "3.2.3",
+    "rollup-plugin-dts": "5.0.0",
     "rollup-plugin-svelte": "7.1.0",
-    "rollup-plugin-terser": "7.0.2",
     "standard-version": "9.5.0",
     "svelte-check": "2.9.2",
     "svelte-preprocess": "4.10.7",
@@ -120,6 +120,6 @@
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
     "typescript": "4.8.4",
-    "vite": "3.1.8"
+    "vite": "3.2.0"
   }
 }
