--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svelte-jsoneditor",
   "description": "A web-based tool to view, edit, format, transform, and validate JSON",
-  "version": "0.10.2",
+  "version": "0.11.0-beta.2",
   "homepage": "https://jsoneditoronline.org",
   "repository": {
     "type": "git",
@@ -95,6 +95,7 @@
     "@sveltejs/kit": "1.0.0-next.559",
     "@sveltejs/package": "1.0.0-next.6",
     "@types/cookie": "0.5.1",
+    "@types/expect": "24.3.0",
     "@types/lodash-es": "4.17.6",
     "@types/mocha": "10.0.0",
     "@typescript-eslint/eslint-plugin": "5.44.0",
@@ -118,6 +119,7 @@
     "svelte-preprocess": "4.10.7",
     "svelte2tsx": "0.5.20",
     "ts-node": "10.9.1",
+    "tsconfig-paths": "4.1.0",
     "tslib": "2.4.1",
     "typescript": "4.9.3",
     "vite": "3.2.4"
