--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
   "dependencies": {
     "@codemirror/commands": "^6.1.2",
     "@codemirror/lang-json": "^6.0.1",
-    "@codemirror/language": "^6.3.1",
+    "@codemirror/language": "^6.3.2",
     "@codemirror/lint": "^6.1.0",
     "@codemirror/search": "^6.2.3",
     "@codemirror/state": "^6.1.4",
-    "@codemirror/view": "^6.7.0",
+    "@codemirror/view": "^6.7.1",
     "@fontsource/fira-mono": "^4.5.10",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
@@ -72,10 +72,10 @@
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
     "natural-compare-lite": "^1.4.0",
-    "sass": "^1.56.1",
-    "svelte": "^3.54.0",
+    "sass": "^1.57.0",
+    "svelte": "^3.55.0",
     "svelte-awesome": "^3.0.1",
-    "svelte-select": "^4.4.7",
+    "svelte-select": "^5.0.0",
     "svelte-simple-modal": "^1.4.5",
     "vanilla-picker": "^2.12.1"
   },
@@ -85,42 +85,42 @@
     "@commitlint/cli": "17.3.0",
     "@commitlint/config-conventional": "17.3.0",
     "@rollup/plugin-babel": "6.0.3",
-    "@rollup/plugin-commonjs": "23.0.3",
-    "@rollup/plugin-json": "5.0.2",
+    "@rollup/plugin-commonjs": "24.0.0",
+    "@rollup/plugin-json": "6.0.0",
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-terser": "0.1.0",
     "@rollup/plugin-typescript": "10.0.1",
-    "@sveltejs/adapter-auto": "1.0.0-next.90",
-    "@sveltejs/kit": "1.0.0-next.572",
-    "@sveltejs/package": "1.0.0-next.6",
+    "@sveltejs/adapter-auto": "1.0.0",
+    "@sveltejs/kit": "1.0.1",
+    "@sveltejs/package": "1.0.1",
     "@types/cookie": "0.5.1",
     "@types/expect": "24.3.0",
     "@types/lodash-es": "4.17.6",
     "@types/mocha": "10.0.1",
-    "@typescript-eslint/eslint-plugin": "5.45.1",
-    "@typescript-eslint/parser": "5.45.1",
+    "@typescript-eslint/eslint-plugin": "5.46.1",
+    "@typescript-eslint/parser": "5.46.1",
     "cpy-cli": "4.2.0",
     "del-cli": "5.0.0",
-    "eslint": "8.29.0",
+    "eslint": "8.30.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-svelte3": "4.0.0",
     "husky": "8.0.2",
-    "lossless-json": "2.0.3",
-    "mocha": "10.1.0",
+    "lossless-json": "2.0.4",
+    "mocha": "10.2.0",
     "npm-run-all": "4.1.5",
-    "prettier": "2.8.0",
-    "prettier-plugin-svelte": "2.8.1",
-    "rollup": "3.6.0",
+    "prettier": "2.8.1",
+    "prettier-plugin-svelte": "2.9.0",
+    "rollup": "3.7.5",
     "rollup-plugin-dts": "5.0.0",
     "rollup-plugin-svelte": "7.1.0",
     "standard-version": "9.5.0",
-    "svelte-check": "2.10.1",
-    "svelte-preprocess": "4.10.7",
+    "svelte-check": "2.10.2",
+    "svelte-preprocess": "5.0.0",
     "svelte2tsx": "0.5.22",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.1",
     "tslib": "2.4.1",
-    "typescript": "4.9.3",
-    "vite": "3.2.5"
+    "typescript": "4.9.4",
+    "vite": "4.0.2"
   }
 }
