--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "format": "prettier --write --plugin-search-dir=. .",
     "prepare": "husky install && cd tools && node generateDiffSequenceEsm.js && cd ..",
     "release": "npm-run-all release:**",
-    "release:build-and-test": "npm run build-and-test",
+    "release:lint": "npm run lint",
+    "release:test": "npm test",
     "release:version": "standard-version",
+    "release:build": "npm run build",
     "release:push": "git push && git push --tag",
     "release:publish:svelte-jsoneditor": "npm publish package/",
     "release:publish:vanilla-jsoneditor": "npm publish package-vanilla/",
