chore: replace mocha with vitest

--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "build:vanilla:copy:readme": "cpy --rename README.md README-VANILLA.md package-vanilla",
     "build:vanilla:copy:themes": "cpy --flat src/lib/themes package-vanilla/themes",
     "build:vanilla:package-json": "node tools/createVanillaPackageJson.js",
-    "build-and-test": "npm test && npm run lint && npm run build",
-    "test": "mocha",
+    "build-and-test": "npm run test-ci && npm run lint && npm run build",
+    "test": "vitest",
+    "test-ci": "vitest run",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "npm run lint:prettier && npm run lint:eslint",
@@ -43,7 +44,7 @@
     "prepare": "husky install && cd tools && node generateDiffSequenceEsm.js && cd ..",
     "release": "npm-run-all release:**",
     "release:lint": "npm run lint",
-    "release:test": "npm test",
+    "release:test": "npm run test-ci",
     "release:version": "standard-version",
     "release:build": "npm run build",
     "release:push": "git push && git push --tag",
@@ -96,7 +97,6 @@
     "@types/cookie": "0.5.1",
     "@types/expect": "24.3.0",
     "@types/lodash-es": "4.17.6",
-    "@types/mocha": "10.0.1",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "@typescript-eslint/parser": "5.48.0",
     "cpy-cli": "4.2.0",
@@ -106,7 +106,6 @@
     "eslint-plugin-svelte3": "4.0.0",
     "husky": "8.0.3",
     "lossless-json": "2.0.5",
-    "mocha": "10.2.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.2",
     "prettier-plugin-svelte": "2.9.0",
@@ -117,10 +116,8 @@
     "svelte-check": "3.0.1",
     "svelte-preprocess": "5.0.0",
     "svelte2tsx": "0.6.0",
-    "ts-node": "10.9.1",
-    "tsconfig-paths": "4.1.2",
-    "tslib": "2.4.1",
     "typescript": "4.9.4",
-    "vite": "4.0.4"
+    "vite": "4.0.4",
+    "vitest": "0.27.0"
   }
 }
