chore: add a coverage script

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "build-and-test": "npm run test-ci && npm run lint && npm run build",
     "test": "vitest",
     "test-ci": "vitest run",
+    "coverage": "vitest run --coverage",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "npm run lint:prettier && npm run lint:eslint",
@@ -99,6 +100,7 @@
     "@types/lodash-es": "4.17.6",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "@typescript-eslint/parser": "5.48.0",
+    "@vitest/coverage-c8": "0.27.0",
     "cpy-cli": "4.2.0",
     "del-cli": "5.0.0",
     "eslint": "8.31.0",
