--- a/package.json
+++ b/package.json
@@ -95,6 +95,9 @@
     "@sveltejs/adapter-auto": "1.0.0",
     "@sveltejs/kit": "1.0.7",
     "@sveltejs/package": "1.0.2",
+    "@sveltejs/vite-plugin-svelte": "2.0.2",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/svelte": "3.2.2",
     "@types/cookie": "0.5.1",
     "@types/expect": "24.3.0",
     "@types/lodash-es": "4.17.6",
@@ -107,6 +110,7 @@
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-svelte3": "4.0.0",
     "husky": "8.0.3",
+    "jsdom": "21.0.0",
     "lossless-json": "2.0.5",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.2",
