--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@fontsource/fira-mono": "^4.5.10",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "ajv-dist": "^8.12.0",
+    "ajv": "^8.12.0",
     "codemirror": "^6.0.1",
     "diff-sequences": "^29.3.1",
     "immutable-json-patch": "^5.1.2",
