chore: improve TypeScript types (WIP)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "strict": false, // TODO: change config strict to true
-    "noImplicitAny": null, // TODO: change config noImplicitAny to false
+    "noImplicitAny": false, // TODO: change config noImplicitAny to true
     "allowJs": false, // turned off (temporarily?) because else Mocha tests fail to run in WebStorm, see https://youtrack.jetbrains.com/issue/WEB-50130
     "checkJs": false,
     "paths": {
