--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@testing-library/svelte": "3.2.2",
     "@types/cookie": "0.5.1",
     "@types/expect": "24.3.0",
+    "@types/jmespath": "0.15.0",
     "@types/lodash-es": "4.17.6",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
