--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "test": "vitest",
     "test-ci": "vitest run",
     "coverage": "vitest run --coverage",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "npm run lint:prettier && npm run lint:eslint",
     "lint:prettier": "prettier --check --plugin-search-dir=. .",
     "lint:eslint": "eslint --cache --ignore-path .gitignore .",
@@ -100,6 +100,7 @@
     "@testing-library/svelte": "3.2.2",
     "@types/cookie": "0.5.1",
     "@types/expect": "24.3.0",
+    "@types/jmespath": "0.15.0",
     "@types/lodash-es": "4.17.6",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
