--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@fontsource/fira-mono": "^4.5.10",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@replit/codemirror-indentation-markers": "6.3.0",
     "ajv": "^8.12.0",
     "codemirror": "^6.0.1",
     "diff-sequences": "^29.4.2",
