--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "del-cli": "5.0.0",
     "eslint": "8.35.0",
     "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-import": "2.27.5",
     "eslint-plugin-svelte3": "4.0.0",
     "husky": "8.0.3",
     "jsdom": "21.1.0",
