chore: update to `@sveltejs/package` v2

--- a/package.json
+++ b/package.json
@@ -8,21 +8,39 @@
     "url": "https://github.com/josdejong/svelte-jsoneditor.git"
   },
   "type": "module",
-  "svelte": "index.js",
-  "module": "index.js",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "svelte": "./index.js",
+  "module": "./index.js",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "sideEffects": false,
   "license": "ISC",
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "svelte": "./index.js"
+    },
+    "./themes/jse-theme-dark.css": "./themes/jse-theme-dark.css",
+    "./themes/jse-theme-default.css": "./themes/jse-theme-default.css",
+    "./CHANGELOG.md": "./CHANGELOG.md",
+    "./LICENSE.md": "./LICENSE.md",
+    "./README.md": "./README.md",
+    "./SECURITY.md": "./SECURITY.md"
+  },
+  "files": [
+    "*"
+  ],
   "scripts": {
     "dev": "vite dev",
     "preview": "svelte-kit preview",
     "build": "npm run build:svelte && npm run build:vanilla",
     "build:watch": "npm run build -- --watch",
     "build:svelte": "npm-run-all build:svelte:**",
+    "build:svelte:clean": "del-cli package",
     "build:svelte:prepare": "svelte-kit sync",
-    "build:svelte:package": "svelte-package",
-    "build:svelte:deprecated": "cpy --flat tools/dist-deprecated package/dist",
+    "build:svelte:package": "svelte-package -o package",
+    "build:svelte:copy:files": "cpy README.md CHANGELOG.md LICENSE.md SECURITY.md package",
+    "build:svelte:delete:files": "del-cli package/index-vanilla.js package/index-vanilla.d.ts",
+    "build:svelte:package-json": "node tools/createSveltePackageJson.js",
     "build:vanilla": "npm-run-all build:vanilla:**",
     "build:vanilla:clean": "del-cli package-vanilla",
     "build:vanilla:bundle": "rollup --config rollup.config.bundle.js",
@@ -95,7 +113,7 @@
     "@rollup/plugin-typescript": "11.1.0",
     "@sveltejs/adapter-auto": "2.0.0",
     "@sveltejs/kit": "1.15.5",
-    "@sveltejs/package": "1.0.2",
+    "@sveltejs/package": "2.0.2",
     "@sveltejs/vite-plugin-svelte": "2.0.4",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/svelte": "3.2.2",
