feat: update dependencies including @sveltejs/package, changing the package structure (#258)
BREAKING CHANGE: 

The pointers to entry files and the exports map in the package.json file have been changed. This is just an under-the-hood change for most use cases.

--- a/package.json
+++ b/package.json
@@ -8,21 +8,40 @@
     "url": "https://github.com/josdejong/svelte-jsoneditor.git"
   },
   "type": "module",
-  "svelte": "index.js",
-  "module": "index.js",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "svelte": "./index.js",
+  "module": "./index.js",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "sideEffects": false,
   "license": "ISC",
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "svelte": "./index.js",
+      "module": "./index.js"
+    },
+    "./themes/jse-theme-dark.css": "./themes/jse-theme-dark.css",
+    "./themes/jse-theme-default.css": "./themes/jse-theme-default.css",
+    "./CHANGELOG.md": "./CHANGELOG.md",
+    "./LICENSE.md": "./LICENSE.md",
+    "./README.md": "./README.md",
+    "./SECURITY.md": "./SECURITY.md"
+  },
+  "files": [
+    "*"
+  ],
   "scripts": {
     "dev": "vite dev",
     "preview": "svelte-kit preview",
     "build": "npm run build:svelte && npm run build:vanilla",
     "build:watch": "npm run build -- --watch",
     "build:svelte": "npm-run-all build:svelte:**",
+    "build:svelte:clean": "del-cli package",
     "build:svelte:prepare": "svelte-kit sync",
-    "build:svelte:package": "svelte-package",
-    "build:svelte:deprecated": "cpy --flat tools/dist-deprecated package/dist",
+    "build:svelte:package": "svelte-package -o package",
+    "build:svelte:copy:files": "cpy README.md CHANGELOG.md LICENSE.md SECURITY.md package",
+    "build:svelte:delete:files": "del-cli package/index-vanilla.js package/index-vanilla.d.ts",
+    "build:svelte:package-json": "node tools/createSveltePackageJson.js",
     "build:vanilla": "npm-run-all build:vanilla:**",
     "build:vanilla:clean": "del-cli package-vanilla",
     "build:vanilla:bundle": "rollup --config rollup.config.bundle.js",
@@ -57,10 +76,10 @@
     "@codemirror/commands": "^6.2.2",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/language": "^6.6.0",
-    "@codemirror/lint": "^6.2.0",
+    "@codemirror/lint": "^6.2.1",
     "@codemirror/search": "^6.3.0",
     "@codemirror/state": "^6.2.0",
-    "@codemirror/view": "^6.9.3",
+    "@codemirror/view": "^6.9.4",
     "@fontsource/fira-mono": "^4.5.10",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
@@ -75,27 +94,27 @@
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
     "natural-compare-lite": "^1.4.0",
-    "sass": "^1.60.0",
+    "sass": "^1.62.0",
     "svelte": "^3.58.0",
     "svelte-awesome": "^3.2.0",
-    "svelte-select": "^5.5.3",
+    "svelte-select": "^5.6.0",
     "svelte-simple-modal": "^1.5.2",
     "vanilla-picker": "^2.12.1"
   },
   "devDependencies": {
     "@babel/core": "7.21.4",
     "@babel/preset-env": "7.21.4",
-    "@commitlint/cli": "17.5.1",
-    "@commitlint/config-conventional": "17.4.4",
+    "@commitlint/cli": "17.6.1",
+    "@commitlint/config-conventional": "17.6.1",
     "@rollup/plugin-babel": "6.0.3",
-    "@rollup/plugin-commonjs": "24.0.1",
+    "@rollup/plugin-commonjs": "24.1.0",
     "@rollup/plugin-json": "6.0.0",
-    "@rollup/plugin-node-resolve": "15.0.1",
-    "@rollup/plugin-terser": "0.4.0",
-    "@rollup/plugin-typescript": "11.0.0",
+    "@rollup/plugin-node-resolve": "15.0.2",
+    "@rollup/plugin-terser": "0.4.1",
+    "@rollup/plugin-typescript": "11.1.0",
     "@sveltejs/adapter-auto": "2.0.0",
-    "@sveltejs/kit": "1.15.0",
-    "@sveltejs/package": "1.0.2",
+    "@sveltejs/kit": "1.15.5",
+    "@sveltejs/package": "2.0.2",
     "@sveltejs/vite-plugin-svelte": "2.0.4",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/svelte": "3.2.2",
@@ -103,12 +122,12 @@
     "@types/expect": "24.3.0",
     "@types/jmespath": "0.15.0",
     "@types/lodash-es": "4.17.7",
-    "@typescript-eslint/eslint-plugin": "5.57.0",
-    "@typescript-eslint/parser": "5.57.0",
-    "@vitest/coverage-c8": "0.29.8",
+    "@typescript-eslint/eslint-plugin": "5.58.0",
+    "@typescript-eslint/parser": "5.58.0",
+    "@vitest/coverage-c8": "0.30.1",
     "cpy-cli": "4.2.0",
     "del-cli": "5.0.0",
-    "eslint": "8.37.0",
+    "eslint": "8.38.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-svelte3": "4.0.0",
@@ -118,15 +137,15 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.8.7",
     "prettier-plugin-svelte": "2.10.0",
-    "rollup": "3.20.2",
+    "rollup": "3.20.4",
     "rollup-plugin-dts": "5.3.0",
     "rollup-plugin-svelte": "7.1.4",
     "standard-version": "9.5.0",
-    "svelte-check": "3.1.4",
+    "svelte-check": "3.2.0",
     "svelte-preprocess": "5.0.3",
-    "svelte2tsx": "0.6.10",
-    "typescript": "4.9.5",
-    "vite": "4.0.4",
-    "vitest": "0.29.8"
+    "svelte2tsx": "0.6.11",
+    "typescript": "5.0.4",
+    "vite": "4.2.1",
+    "vitest": "0.30.1"
   }
 }
