--- a/package.json
+++ b/package.json
@@ -76,75 +76,75 @@
     "@codemirror/commands": "^6.2.4",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/language": "^6.8.0",
-    "@codemirror/lint": "^6.2.2",
+    "@codemirror/lint": "^6.4.0",
     "@codemirror/search": "^6.5.0",
     "@codemirror/state": "^6.2.1",
-    "@codemirror/view": "^6.13.2",
+    "@codemirror/view": "^6.16.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@replit/codemirror-indentation-markers": "6.4.2",
     "ajv": "^8.12.0",
     "codemirror": "^6.0.1",
     "diff-sequences": "^29.4.3",
-    "immutable-json-patch": "^5.1.2",
+    "immutable-json-patch": "^5.1.3",
     "jmespath": "^0.16.0",
     "json-source-map": "^0.6.1",
     "jsonrepair": "^3.2.0",
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
     "natural-compare-lite": "^1.4.0",
-    "sass": "^1.63.5",
-    "svelte": "^3.59.2",
-    "svelte-awesome": "^3.2.0",
+    "sass": "^1.64.2",
+    "svelte": "^4.1.2",
+    "svelte-awesome": "^3.2.1",
     "svelte-select": "^5.6.1",
-    "svelte-simple-modal": "^1.5.2",
+    "svelte-simple-modal": "^1.6.1",
     "vanilla-picker": "^2.12.1"
   },
   "devDependencies": {
-    "@babel/core": "7.22.5",
-    "@babel/preset-env": "7.22.5",
-    "@commitlint/cli": "17.6.5",
-    "@commitlint/config-conventional": "17.6.5",
+    "@babel/core": "7.22.9",
+    "@babel/preset-env": "7.22.9",
+    "@commitlint/cli": "17.6.7",
+    "@commitlint/config-conventional": "17.6.7",
     "@rollup/plugin-babel": "6.0.3",
-    "@rollup/plugin-commonjs": "25.0.2",
+    "@rollup/plugin-commonjs": "25.0.3",
     "@rollup/plugin-json": "6.0.0",
     "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-terser": "0.4.3",
-    "@rollup/plugin-typescript": "11.1.1",
+    "@rollup/plugin-typescript": "11.1.2",
     "@sveltejs/adapter-auto": "2.1.0",
-    "@sveltejs/kit": "1.20.4",
-    "@sveltejs/package": "2.0.2",
-    "@sveltejs/vite-plugin-svelte": "2.4.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/svelte": "3.2.2",
+    "@sveltejs/kit": "1.22.4",
+    "@sveltejs/package": "2.2.0",
+    "@sveltejs/vite-plugin-svelte": "2.4.3",
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/svelte": "4.0.3",
     "@types/cookie": "0.5.1",
     "@types/expect": "24.3.0",
     "@types/jmespath": "0.15.0",
-    "@types/lodash-es": "4.17.7",
-    "@typescript-eslint/eslint-plugin": "5.60.0",
-    "@typescript-eslint/parser": "5.60.0",
-    "@vitest/coverage-c8": "0.32.2",
-    "cpy-cli": "4.2.0",
+    "@types/lodash-es": "4.17.8",
+    "@typescript-eslint/eslint-plugin": "6.2.1",
+    "@typescript-eslint/parser": "6.2.1",
+    "@vitest/coverage-c8": "0.33.0",
+    "cpy-cli": "5.0.0",
     "del-cli": "5.0.0",
-    "eslint": "8.43.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-svelte3": "4.0.0",
+    "eslint": "8.46.0",
+    "eslint-config-prettier": "8.9.0",
+    "eslint-plugin-import": "2.28.0",
+    "eslint-plugin-svelte": "2.32.4",
     "husky": "8.0.3",
     "jsdom": "22.1.0",
-    "lossless-json": "2.0.9",
+    "lossless-json": "2.0.11",
     "npm-run-all": "4.1.5",
-    "prettier": "2.8.8",
-    "prettier-plugin-svelte": "2.10.1",
-    "rollup": "3.25.1",
-    "rollup-plugin-dts": "5.3.0",
-    "rollup-plugin-svelte": "7.1.5",
+    "prettier": "3.0.0",
+    "prettier-plugin-svelte": "3.0.3",
+    "rollup": "3.27.0",
+    "rollup-plugin-dts": "5.3.1",
+    "rollup-plugin-svelte": "7.1.6",
     "standard-version": "9.5.0",
-    "svelte-check": "3.4.3",
+    "svelte-check": "3.4.6",
     "svelte-preprocess": "5.0.4",
-    "svelte2tsx": "0.6.15",
-    "typescript": "5.1.3",
-    "vite": "4.3.9",
-    "vitest": "0.32.2"
+    "svelte2tsx": "0.6.19",
+    "typescript": "5.1.6",
+    "vite": "4.4.8",
+    "vitest": "0.33.0"
   }
 }
