fix: `prettier-plugin-svelte` not working

--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "npm run lint:prettier && npm run lint:eslint",
-    "lint:prettier": "prettier --check --plugin-search-dir=. .",
+    "lint:prettier": "prettier --check --plugin prettier-plugin-svelte .",
     "lint:eslint": "eslint --cache --ignore-path .gitignore .",
-    "format": "prettier --write --plugin-search-dir=. .",
+    "format": "prettier --write --plugin prettier-plugin-svelte .",
     "prepare": "husky install && cd tools && node generateDiffSequenceEsm.js && cd ..",
     "release": "npm-run-all release:**",
     "release:lint": "npm run lint",
