--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "release-dry-run": "standard-version --dry-run"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.9.0",
     "@codemirror/commands": "^6.2.4",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/language": "^6.8.0",
@@ -84,7 +85,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@replit/codemirror-indentation-markers": "6.4.3",
     "ajv": "^8.12.0",
-    "codemirror": "^6.0.1",
     "diff-sequences": "^29.4.3",
     "immutable-json-patch": "^5.1.3",
     "jmespath": "^0.16.0",
