--- a/package.json
+++ b/package.json
@@ -40,13 +40,11 @@
     "build:svelte:prepare": "svelte-kit sync",
     "build:svelte:package": "svelte-package -o package",
     "build:svelte:copy:files": "cpy README.md CHANGELOG.md LICENSE.md SECURITY.md package",
-    "build:svelte:delete:files": "del-cli package/index-vanilla.js package/index-vanilla.d.ts",
     "build:svelte:package-json": "node tools/createSveltePackageJson.js",
     "build:vanilla": "npm-run-all build:vanilla:**",
     "build:vanilla:clean": "del-cli package-vanilla",
     "build:vanilla:bundle": "rollup --config rollup.config.bundle.js",
     "build:vanilla:bundle-types": "rollup --config rollup.config.bundle-types.js",
-    "build:vanilla:postprocess-types": "node tools/postprocessVanillaTypes.js",
     "build:vanilla:copy:files": "cpy CHANGELOG.md LICENSE.md SECURITY.md package-vanilla",
     "build:vanilla:copy:readme": "cpy --rename README.md README-VANILLA.md package-vanilla",
     "build:vanilla:copy:themes": "cpy --flat src/lib/themes package-vanilla/themes",
@@ -58,9 +56,9 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "npm run lint:prettier && npm run lint:eslint",
-    "lint:prettier": "prettier --check --plugin-search-dir=. .",
+    "lint:prettier": "prettier --check --plugin prettier-plugin-svelte .",
     "lint:eslint": "eslint --cache --ignore-path .gitignore .",
-    "format": "prettier --write --plugin-search-dir=. .",
+    "format": "prettier --write --plugin prettier-plugin-svelte .",
     "prepare": "husky install && cd tools && node generateDiffSequenceEsm.js && cd ..",
     "release": "npm-run-all release:**",
     "release:lint": "npm run lint",
@@ -73,78 +71,78 @@
     "release-dry-run": "standard-version --dry-run"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.9.0",
     "@codemirror/commands": "^6.2.4",
     "@codemirror/lang-json": "^6.0.1",
-    "@codemirror/language": "^6.8.0",
-    "@codemirror/lint": "^6.2.2",
-    "@codemirror/search": "^6.5.0",
+    "@codemirror/language": "^6.9.0",
+    "@codemirror/lint": "^6.4.0",
+    "@codemirror/search": "^6.5.1",
     "@codemirror/state": "^6.2.1",
-    "@codemirror/view": "^6.13.2",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@replit/codemirror-indentation-markers": "6.4.2",
+    "@codemirror/view": "^6.16.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@replit/codemirror-indentation-markers": "6.4.3",
     "ajv": "^8.12.0",
-    "codemirror": "^6.0.1",
     "diff-sequences": "^29.4.3",
-    "immutable-json-patch": "^5.1.2",
+    "immutable-json-patch": "^5.1.3",
     "jmespath": "^0.16.0",
     "json-source-map": "^0.6.1",
     "jsonrepair": "^3.2.0",
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
     "natural-compare-lite": "^1.4.0",
-    "sass": "^1.63.5",
-    "svelte": "^3.59.2",
-    "svelte-awesome": "^3.2.0",
+    "sass": "^1.66.1",
+    "svelte": "^4.2.0",
+    "svelte-awesome": "^3.2.1",
     "svelte-select": "^5.6.1",
-    "svelte-simple-modal": "^1.5.2",
-    "vanilla-picker": "^2.12.1"
+    "svelte-simple-modal": "^1.6.1",
+    "vanilla-picker": "^2.12.2"
   },
   "devDependencies": {
-    "@babel/core": "7.22.5",
-    "@babel/preset-env": "7.22.5",
-    "@commitlint/cli": "17.6.5",
-    "@commitlint/config-conventional": "17.6.5",
+    "@babel/core": "7.22.10",
+    "@babel/preset-env": "7.22.10",
+    "@commitlint/cli": "17.7.1",
+    "@commitlint/config-conventional": "17.7.0",
     "@rollup/plugin-babel": "6.0.3",
-    "@rollup/plugin-commonjs": "25.0.2",
+    "@rollup/plugin-commonjs": "25.0.4",
     "@rollup/plugin-json": "6.0.0",
-    "@rollup/plugin-node-resolve": "15.1.0",
+    "@rollup/plugin-node-resolve": "15.2.0",
     "@rollup/plugin-terser": "0.4.3",
-    "@rollup/plugin-typescript": "11.1.1",
+    "@rollup/plugin-typescript": "11.1.2",
     "@sveltejs/adapter-auto": "2.1.0",
-    "@sveltejs/kit": "1.20.4",
-    "@sveltejs/package": "2.0.2",
-    "@sveltejs/vite-plugin-svelte": "2.4.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/svelte": "3.2.2",
+    "@sveltejs/kit": "1.22.6",
+    "@sveltejs/package": "2.2.1",
+    "@sveltejs/vite-plugin-svelte": "2.4.5",
+    "@testing-library/jest-dom": "6.0.1",
+    "@testing-library/svelte": "4.0.3",
     "@types/cookie": "0.5.1",
     "@types/expect": "24.3.0",
     "@types/jmespath": "0.15.0",
-    "@types/lodash-es": "4.17.7",
-    "@typescript-eslint/eslint-plugin": "5.60.0",
-    "@typescript-eslint/parser": "5.60.0",
-    "@vitest/coverage-c8": "0.32.2",
-    "cpy-cli": "4.2.0",
+    "@types/lodash-es": "4.17.8",
+    "@typescript-eslint/eslint-plugin": "6.4.0",
+    "@typescript-eslint/parser": "6.4.0",
+    "@vitest/coverage-c8": "0.33.0",
+    "cpy-cli": "5.0.0",
     "del-cli": "5.0.0",
-    "eslint": "8.43.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-svelte3": "4.0.0",
+    "eslint": "8.47.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-svelte": "2.32.4",
     "husky": "8.0.3",
     "jsdom": "22.1.0",
-    "lossless-json": "2.0.9",
+    "lossless-json": "2.0.11",
     "npm-run-all": "4.1.5",
-    "prettier": "2.8.8",
-    "prettier-plugin-svelte": "2.10.1",
-    "rollup": "3.25.1",
-    "rollup-plugin-dts": "5.3.0",
-    "rollup-plugin-svelte": "7.1.5",
+    "prettier": "3.0.2",
+    "prettier-plugin-svelte": "3.0.3",
+    "rollup": "3.28.0",
+    "rollup-plugin-dts": "6.0.0",
+    "rollup-plugin-svelte": "7.1.6",
     "standard-version": "9.5.0",
-    "svelte-check": "3.4.3",
+    "svelte-check": "3.5.0",
     "svelte-preprocess": "5.0.4",
-    "svelte2tsx": "0.6.15",
-    "typescript": "5.1.3",
-    "vite": "4.3.9",
-    "vitest": "0.32.2"
+    "svelte2tsx": "0.6.20",
+    "typescript": "5.1.6",
+    "vite": "4.4.9",
+    "vitest": "0.34.2"
   }
 }
