--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "svelte-jsoneditor",
   "description": "A web-based tool to view, edit, format, transform, and validate JSON",
   "version": "0.18.0",
-  "homepage": "https://jsoneditoronline.org",
+  "homepage": "https://github.com/josdejong/svelte-jsoneditor",
   "repository": {
     "type": "git",
     "url": "https://github.com/josdejong/svelte-jsoneditor.git"
