--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@replit/codemirror-indentation-markers": "6.4.3",
     "ajv": "^8.12.0",
+    "codemirror-wrapped-line-indent": "^0.0.2",
     "diff-sequences": "^29.6.3",
     "immutable-json-patch": "^5.1.3",
     "jmespath": "^0.16.0",
