--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "@codemirror/view": "^6.16.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@replit/codemirror-indentation-markers": "6.4.3",
+    "@replit/codemirror-indentation-markers": "^6.4.3",
     "ajv": "^8.12.0",
     "codemirror-wrapped-line-indent": "^0.0.2",
     "diff-sequences": "^29.6.3",
