feat: export a bundle with and one without external dependencies
BREAKING CHANGE:

When using `vanilla-jsoneditor` directly in the browser,
you now have to `import { JSONEditor } from 'vanilla-jsoneditor/standalone.js'`.

--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "build:svelte:package-json": "node tools/createSveltePackageJson.js",
     "build:vanilla": "npm-run-all build:vanilla:**",
     "build:vanilla:clean": "del-cli package-vanilla",
-    "build:vanilla:bundle": "rollup --config rollup.config.bundle.js",
-    "build:vanilla:bundle-types": "rollup --config rollup.config.bundle-types.js",
+    "build:vanilla:library": "rollup --config rollup.config.vanilla-library.js",
+    "build:vanilla:bundle": "rollup --config rollup.config.vanilla-bundle.js",
+    "build:vanilla:types": "rollup --config rollup.config.vanilla-types.js",
     "build:vanilla:copy:files": "cpy CHANGELOG.md LICENSE.md SECURITY.md package-vanilla",
     "build:vanilla:copy:readme": "cpy --rename README.md README-VANILLA.md package-vanilla",
     "build:vanilla:copy:themes": "cpy --flat src/lib/themes package-vanilla/themes",
