--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "ajv": "^8.12.0",
     "codemirror-wrapped-line-indent": "^1.0.0",
     "diff-sequences": "^29.6.3",
-    "immutable-json-patch": "^5.1.3",
+    "immutable-json-patch": "6.0.0",
     "jmespath": "^0.16.0",
     "json-source-map": "^0.6.1",
     "jsonrepair": "^3.4.1",
