--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "build:vanilla:copy:readme": "cpy --rename README.md README-VANILLA.md package-vanilla",
     "build:vanilla:copy:themes": "cpy --flat src/lib/themes package-vanilla/themes",
     "build:vanilla:package-json": "node tools/createVanillaPackageJson.js",
-    "build-and-test": "npm run test-ci && npm run lint && npm run build",
+    "build-and-test": "npm run test-ci && npm run check && npm run lint && npm run build",
     "test": "vitest",
     "test-ci": "vitest run",
     "coverage": "vitest run --coverage",
@@ -62,6 +62,7 @@
     "release": "npm-run-all release:**",
     "release:lint": "npm run lint",
     "release:test": "npm run test-ci",
+    "release:check": "npm run check",
     "release:version": "standard-version",
     "release:build": "npm run build",
     "release:push": "git push && git push --tag",
