--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@codemirror/view": "^6.23.0",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@lezer/highlight": "^1.2.0",
     "@replit/codemirror-indentation-markers": "^6.5.0",
     "ajv": "^8.12.0",
     "codemirror-wrapped-line-indent": "^1.0.0",
