--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "memoize-one": "^6.0.0",
     "natural-compare-lite": "^1.4.0",
     "sass": "^1.72.0",
-    "svelte": "^4.2.12",
+    "svelte": "^5.0.0-next.123",
     "svelte-awesome": "^3.3.1",
     "svelte-select": "^5.8.3",
     "svelte-simple-modal": "^1.6.2",
