chore: add an eslint rule to ensure consistent returns, fix linting errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,14 @@
     "sourceType": "module",
     "ecmaVersion": 2019
   },
+  "rules": {
+    "consistent-return": [
+      "warn",
+      {
+        "treatUndefinedAsUnspecified": false
+      }
+    ]
+  },
   "overrides": [
     {
       "files": ["*.svelte"],
